# ts-prediction

./: .gitignore  CLAUDE.md  PLAN.md  STATUS.md  brooks_complete_guide_1.md  brooks_complete_guide_2.md  documentation.md  enhanced_eval.py  pyproject.toml  requirements.txt
docs/: data_pipeline.md  data_plan.md  findings_20250926.md
notebooks/: data_catalog_tutorial.ipynb  model_comparison.ipynb  tokenizer_analysis.ipynb  transformer_workflow.ipynb
tests/: test_diagnostics.py  test_fusion_backbone.py  test_tokenizer_analytics.py  test_training_pipeline.py
trading_transformers/: README.md  __init__.py  backtest.py  logging.py
trading_transformers/configs/: fusion.yaml
trading_transformers/data/: __main__.py  catalog.py  cli.py  resample.py
trading_transformers/evaluation/: __main__.py  backtest.py  diagnostics.py  metrics.py
trading_transformers/features/: __init__.py  continuous.py  tokens.py
trading_transformers/models/: __init__.py  patchtst.py  patchtst_reference.py  tft.py
trading_transformers/tokenizers/: __init__.py  __main__.py  cli.py
trading_transformers/training/: __init__.py  __main__.py  cli.py  config.py  datamodule.py  lightning.py  runner.py
transformers/: README.md  __init__.py
transformers/configs/: backtest.yaml  eval.yaml  patchtst.yaml
transformers/data/: __init__.py  __main__.py  catalog.py  sources.py
transformers/evaluation/: __init__.py  __main__.py  cli.py
transformers/features/: continuous.py
transformers/models/: __init__.py  fusion.py  hf_time_series.py
transformers/tokenizers/: __main__.py  analytics.py  brooks.py
transformers/training/: __main__.py  cli.py  datamodule.py  lightning.py
