[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-transformers-toolkit"
version = "0.1.0"
description = "Transformer-based financial time-series modeling toolkit"
readme = {file = "trading_transformers/README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
authors = [{name = "Mohamed Ali"}]
license = {text = "Proprietary"}
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pytorch-lightning>=2.3",
    "torch>=2.2",
    "transformers>=4.38",
    "pyyaml>=6.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["trading_transformers*"]
exclude = ["tests"]

[tool.setuptools.package-data]
"trading_transformers" = ["configs/*.yaml", "README.md"]

[tool.pytest.ini_options]
pythonpath = ["."]
